--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -5,12 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
-
-    <Button
-        android:id="@+id/btnMoveToOtherActivity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="다른 화면으로 이동하기"/>
+    tools:context=".OtherActivity">
 
 </LinearLayout>
