--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -5,6 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#000000"
+    android:gravity="center"
     tools:context=".OtherActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="여기는 다른 화면 입니다."
+        android:textColor="#FFFFFF"
+        android:textSize="20sp" />
+    
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="이전 화면으로 돌아가기" />
+    
 </LinearLayout>
