--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -17,8 +17,9 @@
         android:textSize="20sp" />
     
     <Button
+        android:id="@+id/btnReturnToMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="이전 화면으로 돌아가기" />
+        android:text="메인 화면으로 돌아가기" />
     
 </LinearLayout>
